dark mode added (from matchMedia only); sticky fixed

--- a/public/global.css
+++ b/public/global.css
@@ -4,12 +4,23 @@ html, body {
 	height: 100%;
 }
 
+body:not(.dark-mode) {
+	--color: rgb(5, 5, 5);
+	--background-color: rgb(250, 250, 250);
+	--background-color-dialog: rgba(0, 0, 0, 0.66);
+}
+
+body.dark-mode {
+	--color: rgb(250, 250, 250);
+	--background-color: rgb(5, 5, 5);
+	--background-color-dialog: rgba(0, 0, 0, 0.66);
+}
+
 body {
-	color: #333;
-	margin: 0;
-	padding: 8px;
 	box-sizing: border-box;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	color: var(--color);
+	background-color: var(--background-color);
 }
 
 a {
